--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -23,60 +23,54 @@
 		<!-- FONTS -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
 
 	</head>
 	<body>
-		<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			<div class="container-fluid">
-				<a class="navbar-brand" href="{{ path('app_home') }}">home</a>
-				<button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav me-auto mb-2 mb-lg-0">
-						<li class="nav-item">
-							<a class="nav-link active" aria-current="page" href="{{ path('app_login') }}">login</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="{{ path('app_register') }}">register</a>
-						</li>
-				        <li class="nav-item">
-							<a class="nav-link" href="{{ path('news_index') }}">News index</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="{{ path('users_index') }}">User</a>
-						</li>
-					</ul>
-					<form class="d-flex">
-						<input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-						<button class="btn btn-outline-success" type="submit">Search</button>
-					</form>
-				</div>
-				<div class="mb-3 p-3 Nconnect">
-						{% if app.user %}
-	
-							Bonjour,
-							{{ app.user.pseudo }}
-							<a href="{{ path('app_logout') }}">Déconnexion</a>
-	
-						{% else %}
-	
-							<a href="{{ path('app_login') }}">connexion</a>
-	
-						{% endif %}
-					</div>
+		<!-- NAVIGATION -->
+			<nav>
+			<img src="/uploads/photos/logoLCDM.png" alt="logo menu" class="logo-LCDM"> <ul class="liste-nav">
+				<li class="item-nav">
+					<a href="{{ path('app_home') }}"></a>
+				</li>
+				<li class="item-nav">
+					<a href="{{ path('app_login') }}">Login</a>
+				</li>
+				<li class="item-nav">
+					<a href="{{ path('app_register') }}">Register</a>
+				</li>
+				<li class="item-nav">
+					<a href="{{ path('news_index') }}">News</a>
+				</li>
+				<li class="item-nav">
+					<a href="{{ path('users_index') }}">User</a>
+				</li>
+				<li class="item-nav connexion-petit-ecran">
+					{% if app.user %}
+						<a href="{{ path('app_logout') }}">Déconnexion</a>
+					{% else %}
+						<a href="{{ path('app_login') }}">Connexion</a>
+					{% endif %}
+				</li>
+			</ul>
+			<img src="/uploads/photos/menu.svg" alt="logo menu" class="logo-menu">
+			<div class="connexion-grand-ecran">
+				{% if app.user %}
+					<a href="{{ path('app_logout') }}">Déconnexion</a>
+				{% else %}
+					<a href="{{ path('app_login') }}">Connexion</a>
+				{% endif %}
 			</div>
 		</nav>
+
 		{% block body %}{% endblock %}
 
 
-			<footer >
-				FOOTER
-			</footer>
+		<footer>
+			FOOTER
+		</footer>
 
-        <!--SCRIPTS
-												    ===========================================================-->
+		<!--SCRIPTS ===========================================================-->
 		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
 	</body>
