--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -1,8 +1,12 @@
 {% extends 'base.html.twig' %}
-
 {% block title %}Le Coin Des Managers !
 {% endblock %}
-
 {% block body %}
-	
+
+	<div class="accueil" id="home">
+		<img src="/uploads/photos/logoLCDM.png" alt"logo football" class="logo-accueil">
+		<h1>Le Coin Des Managers</h1>
+        <a href="#" class="btn-accueil">Voir toute l'actualité</a>
+	</div>
+
 {% endblock %}
