--- a/templates/news/indexAdmin.html.twig
+++ b/templates/news/indexAdmin.html.twig
@@ -30,7 +30,7 @@
                 <td>{{ news.modificationDateNews ? news.modificationDateNews|date('Y-m-d H:i:s') : '' }}</td>
                 <td>
                
-                    <a href="{{ path('news_show', {'id': news.id}) }}">show</a>
+                    <a href="{{ path('news_show', {'id': news.id}) }}">show wwwww</a>
                     <a href="{{ path('news_edit', {'id': news.id}) }}">edit</a>
 				
                 </td>
