maj commentaire news

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -31,7 +31,7 @@
 			<nav>
 			<img src="/uploads/photos/logoLCDM.png" alt="logo menu" class="logo-LCDM"> <ul class="liste-nav">
 				<li class="item-nav">
-					<a href="{{ path('app_home') }}"></a>
+					<a href="{{ path('app_home') }}">Home</a>
 				</li>
 				<li class="item-nav">
 					<a href="{{ path('app_login') }}">Login</a>
