Maj entité forum

--- a/templates/comments_news/index.html.twig
+++ b/templates/comments_news/index.html.twig
@@ -3,6 +3,8 @@
 {% block title %}CommentsNews index{% endblock %}
 
 {% block body %}
+<section style="height: 100px;">
+</section>
     <h1>CommentsNews index</h1>
 
     <table class="table">
