--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -4,6 +4,10 @@
 {% endblock %}
 
 {% block body %}
+<section style="height: 100px;">
+</section>
+
+<div class="container">
 	{% for flashError in app.flashes('verify_email_error') %}
 		<div class="alert alert-danger" role="alert">{{ flashError }}</div>
 	{% endfor %}
@@ -20,4 +24,6 @@
 
 	<button type="submit" class="btn">S'inscrire</button>
 	{{ form_end(registrationForm) }}
+</div>
+
 {% endblock %}
