--- a/templates/users/new.html.twig
+++ b/templates/users/new.html.twig
@@ -3,6 +3,8 @@
 {% block title %}New Users{% endblock %}
 
 {% block body %}
+<section style="height: 100px;">
+</section>
     <h1>Create new Users</h1>
 
     {{ include('users/_form.html.twig') }}
