--- a/templates/comments_news/new.html.twig
+++ b/templates/comments_news/new.html.twig
@@ -3,6 +3,8 @@
 {% block title %}New CommentsNews{% endblock %}
 
 {% block body %}
+<section style="height: 100px;">
+</section>
     <h1>Create new CommentsNews</h1>
 
     {{ include('comments_news/_form.html.twig') }}
