--- a/templates/news/edit.html.twig
+++ b/templates/news/edit.html.twig
@@ -3,6 +3,10 @@
 {% block title %}Edit News{% endblock %}
 
 {% block body %}
+<section style="height: 100px;">
+</section>
+
+<div class="container">
     <h1>Edit News</h1>
 
     {{ include('news/_form.html.twig', {'button_label': 'Update'}) }}
@@ -10,4 +14,6 @@
     <a href="{{ path('news_index') }}">back to list</a>
 
     {{ include('news/_delete_form.html.twig') }}
+</div>
+   
 {% endblock %}
