--- a/templates/users/index.html.twig
+++ b/templates/users/index.html.twig
@@ -3,6 +3,10 @@
 {% block title %}Users index{% endblock %}
 
 {% block body %}
+<section style="height: 100px;">
+</section>
+
+<div class="container">
     <h1>Users index</h1>
 
     <table class="table">
@@ -44,4 +48,6 @@
     </table>
 
     <a href="{{ path('users_new') }}">Create new</a>
+</div>
+    
 {% endblock %}
