--- a/public/css/style.css
+++ b/public/css/style.css
@@ -10,11 +10,15 @@
 
 body {
   background-color: #f1f1f1;
-  font-family: 'Roboto', sans-serif;
+  font-family: 'Orbitron', sans-serif;
 }
 
 body h1 {
   font-family: 'Orbitron', sans-serif;
+}
+
+body .container {
+  background-color: #f1f1f1;
 }
 
 /* NAVIGATION 
@@ -26,7 +30,6 @@ nav {
   background: -webkit-gradient(linear, left top, left bottom, from(#281040), to(#4B177E));
   background: linear-gradient(to bottom, #281040, #4B177E);
   z-index: 10;
-  border-bottom: 6px solid #f9ec34;
   border-bottom: 3px solid #f9ec34;
 }
 
@@ -198,7 +201,7 @@ nav {
   border: 2px solid #f9ec34;
   color: #f1f1f1;
   text-align: center;
-  font-size: 22px;
+  font-size: 20px;
   display: block;
   width: 250px;
   height: 70px;
@@ -224,5 +227,18 @@ nav {
     height: 50px;
     line-height: 50px;
   }
+}
+
+/* FOOTER 
+================================================== */
+footer {
+  height: 100px;
+  width: 100%;
+  z-index: 10;
+  position: absolute;
+  bottom: 0;
+  background: -webkit-gradient(linear, left top, left bottom, from(#4B177E), to(#281040));
+  background: linear-gradient(to bottom, #4B177E, #281040);
+  border-top: 3px solid #f9ec34;
 }
 /*# sourceMappingURL=style.css.map */
