--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,11 +9,6 @@
 			{% endblock %}
 		</title>
 
-		<!-- STYLES -->
-		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-		<link href="{{ asset('css/style.css') }}" type="text/css" rel="stylesheet">
-
-		<script src="{{ asset('js/app.js') }}" async></script>
 
 		<!--ICONS-->
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
@@ -23,55 +18,69 @@
 		<!-- FONTS -->
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-		<link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
+		<link
+		href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
 
+		<!-- STYLES -->
+		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous"> {% block stylesheet %}{% endblock %}
+		<link href="{{ asset('css/style.css') }}" type="text/css" rel="stylesheet">
 	</head>
+
 	<body>
-		<!-- NAVIGATION -->
+		<header>
+			<!-- NAVIGATION -->
 			<nav>
-			<img src="/uploads/photos/logoLCDM.png" alt="logo menu" class="logo-LCDM"> <ul class="liste-nav">
-				<li class="item-nav">
-					<a href="{{ path('app_home') }}">Home</a>
-				</li>
-				<li class="item-nav">
-					<a href="{{ path('app_login') }}">Login</a>
-				</li>
-				<li class="item-nav">
-					<a href="{{ path('app_register') }}">Register</a>
-				</li>
-				<li class="item-nav">
-					<a href="{{ path('news_index') }}">News</a>
-				</li>
-				<li class="item-nav">
-					<a href="{{ path('users_index') }}">User</a>
-				</li>
-				<li class="item-nav connexion-petit-ecran">
+				<img src="/uploads/photos/logoLCDM.png" alt="logo menu" class="logo-LCDM">
+				<ul class="liste-nav">
+					<li class="item-nav">
+						<a href="{{ path('app_home') }}">Home</a>
+					</li>
+					<li class="item-nav">
+						<a href="{{ path('app_login') }}">Login</a>
+					</li>
+					<li class="item-nav">
+						<a href="{{ path('app_register') }}">Register</a>
+					</li>
+					<li class="item-nav">
+						<a href="{{ path('news_index') }}">News</a>
+					</li>
+					<li class="item-nav">
+						<a href="{{ path('users_index') }}">User</a>
+					</li>
+					<li class="item-nav connexion-petit-ecran">
+						{% if app.user %}
+							<a href="{{ path('app_logout') }}">Déconnexion</a>
+						{% else %}
+							<a href="{{ path('app_login') }}">Connexion</a>
+						{% endif %}
+					</li>
+				</ul>
+				<img src="/uploads/photos/menu.svg" alt="logo menu" class="logo-menu">
+				<div class="connexion-grand-ecran">
 					{% if app.user %}
 						<a href="{{ path('app_logout') }}">Déconnexion</a>
 					{% else %}
 						<a href="{{ path('app_login') }}">Connexion</a>
 					{% endif %}
-				</li>
-			</ul>
-			<img src="/uploads/photos/menu.svg" alt="logo menu" class="logo-menu">
-			<div class="connexion-grand-ecran">
-				{% if app.user %}
-					<a href="{{ path('app_logout') }}">Déconnexion</a>
-				{% else %}
-					<a href="{{ path('app_login') }}">Connexion</a>
-				{% endif %}
-			</div>
-		</nav>
+				</div>
+			</nav>
+		</header>
 
-		{% block body %}{% endblock %}
+		<main>
+		<section style="height: 100px;">
+		</section>
+			{% block body %}{% endblock %}
+		</main>
 
-
-		<footer>
-			FOOTER
+		<footer class "footer">
+			Copyright c 2019 - Example
 		</footer>
 
 		<!--SCRIPTS ===========================================================-->
 		<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js" integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
-		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+		<scrip t src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.min.js" integrity="sha384-Atwg2Pkwv9vp0ygtn1JAojH0nYbwNJLPhwyoVbhoPwBhjQPR5VtM2+xf0Uwh9KtT" crossorigin="anonymous"></script>
+		{% block javascripts %}{% endblock %}
+		<script src="{{ asset('js/script.js') }}" async></script>
 	</body>
+
 </html>
