--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -47,6 +47,9 @@
 					<li class="item-nav">
 						<a href="{{ path('users_index') }}">User</a>
 					</li>
+						<li class="item-nav">
+						<a href="{{ path('category_forum_index') }}">Forum</a>
+					</li>
 					<li class="item-nav connexion-petit-ecran">
 						{% if app.user %}
 							<a href="{{ path('app_logout') }}">Déconnexion</a>
