--- a/templates/category_forum/show.html.twig
+++ b/templates/category_forum/show.html.twig
@@ -1,30 +1,37 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}CategoryForum{% endblock %}
+{% block title %}CategoryForum
+{% endblock %}
 
 {% block body %}
-    <h1>CategoryForum</h1>
+	<h1>CategoryForum</h1>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ category_forum.id }}</td>
-            </tr>
-            <tr>
-                <th>NameCategory</th>
-                <td>{{ category_forum.nameCategory }}</td>
-            </tr>
-            <tr>
-                <th>Slug</th>
-                <td>{{ category_forum.slug }}</td>
-            </tr>
-        </tbody>
-    </table>
+	<table class="table">
+		<tbody>
+			<tr>
+				<th>Id</th>
+				<td>{{ category_forum.id }}</td>
+			</tr>
+			<tr>
+				<th>NameCategory</th>
+				<td>{{ category_forum.nameCategory }}</td>
+			</tr>
+			<tr>
+				<th>Slug</th>
+				<td>{{ category_forum.slug }}</td>
+			</tr>
+		</tbody>
+	</table>
+	<a href="{{ path('post_forum_new') }}">Créer un nouveau topic</a>
 
-    <a href="{{ path('category_forum_index') }}">back to list</a>
+	<a href="{{ path('category_forum_index') }}">back to list</a>
 
-    <a href="{{ path('category_forum_edit', {'id': category_forum.id}) }}">edit</a>
+	<a href="{{ path('category_forum_edit', {'id': category_forum.id}) }}">edit</a>
 
-    {{ include('category_forum/_delete_form.html.twig') }}
+	{# {% for category in postForums %}
+		{{ postForum.id }}
+		{{ postForum.titlePost }}
+	{% endfor %}}  #}
+
+	{{ include('category_forum/_delete_form.html.twig') }}
 {% endblock %}
