--- a/templates/category_forum/show.html.twig
+++ b/templates/category_forum/show.html.twig
@@ -29,9 +29,10 @@
 	<a href="{{ path('category_forum_edit', {'id': category_forum.id}) }}">edit</a>
 
 	{# {% for category in postForums %}
-		{{ postForum.id }}
-		{{ postForum.titlePost }}
+		{{ post_forum.id }}
+		{{ post_forum.titlePost }}
 	{% endfor %}}  #}
+	
 
 	{{ include('category_forum/_delete_form.html.twig') }}
 {% endblock %}
