--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -6,7 +6,7 @@
 	<div class="accueil" id="home">
 		<img src="/uploads/photos/logoLCDM.png" alt"logo football" class="logo-accueil">
 		<h1>Le Coin Des Managers</h1>
-        <a href="#" class="btn-accueil">Voir toute l'actualité</a>
+        <a href="{{ path('news_index') }}" class="btn-accueil">Voir toute l'actualité</a>
 	</div>
 
 {% endblock %}
