--- a/templates/post_forum/show.html.twig
+++ b/templates/post_forum/show.html.twig
@@ -3,7 +3,7 @@
 {% block title %}PostForum{% endblock %}
 
 {% block body %}
-    <h1>PostForum</h1>
+    <h1>{{ post_forum.titlePost }}</h1>
 
     <table class="table">
         <tbody>
