--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -3,18 +3,12 @@
 {% block title %}Hello AdminController!{% endblock %}
 
 {% block body %}
-<style>
-    .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-    .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-</style>
+{% if is_granted("ROLE_ADMIN") %}
+<h1>Tableau de bord Admin</h1>
+<h2>news</h2>
 
-<div class="example-wrapper">
-    <h1>Hello {{ controller_name }}! ✅</h1>
-
-    This friendly message is coming from:
-    <ul>
-        <li>Your controller at <code><a href="{{ 'C:/wamp64/www/lecoindesmanagers/src/Controller/AdminController.php'|file_link(0) }}">src/Controller/AdminController.php</a></code></li>
-        <li>Your template at <code><a href="{{ 'C:/wamp64/www/lecoindesmanagers/templates/admin/index.html.twig'|file_link(0) }}">templates/admin/index.html.twig</a></code></li>
-    </ul>
-</div>
+<h2>forum</h2>
+<h3>Ajouter / Modifier une catégorie</h3>
+{% endif %}
 {% endblock %}
+
