--- a/templates/category_forum/index.html.twig
+++ b/templates/category_forum/index.html.twig
@@ -31,5 +31,5 @@
         </tbody>
     </table>
 
-    <a href="{{ path('post_forum_new') }}">Créer un nouveau topic</a>
+    <a href="{{ path('category_forum_new') }}">Créer un nouveau categorie</a>
 {% endblock %}
