--- a/templates/category_forum/new.html.twig
+++ b/templates/category_forum/new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}New CategoryForum{% endblock %}
 
 {% block body %}
-    <h1>Create new CategoryForum</h1>
+    <h1>Créer une nouvelle catégorie de forum</h1>
 
     {{ include('category_forum/_form.html.twig') }}
 
