--- a/templates/users/index.html.twig
+++ b/templates/users/index.html.twig
@@ -4,8 +4,7 @@
 
 {% block body %}
 
-<div class="container">
-    <h1>Users index</h1>
+    <h1>Liste des utilisateurs</h1>
 
     <table class="table">
         <thead>
@@ -13,7 +12,6 @@
                 <th>Id</th>
                 <th>Email</th>
                 <th>Roles</th>
-                <th>Password</th>
                 <th>IsVerified</th>
                 <th>Pseudo</th>
                 <th>CreatedAt</th>
@@ -27,7 +25,6 @@
                 <td>{{ user.id }}</td>
                 <td>{{ user.email }}</td>
                 <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-                <td>{{ user.password }}</td>
                 <td>{{ user.isVerified ? 'Yes' : 'No' }}</td>
                 <td>{{ user.pseudo }}</td>
                 <td>{{ user.createdAt ? user.createdAt|date('Y-m-d H:i:s') : '' }}</td>
@@ -45,7 +42,7 @@
         </tbody>
     </table>
 
-    <a href="{{ path('users_new') }}">Create new</a>
-</div>
+    {# <a href="{{ path('users_new') }}">Create new</a> #}
+
     
 {% endblock %}
