--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -77,9 +77,9 @@
 		{% block body %}{% endblock %}
 	</main>
 
-	<footer class "footer">
+	<!-- <footer class "footer">
 		Copyright c 2019 - Example
-	</footer>
+	</footer> -->
 
 	<!--SCRIPTS ===========================================================-->
 	<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
