--- a/public/css/style.scss
+++ b/public/css/style.scss
@@ -9,11 +9,11 @@
 }
 
 body {
-  background-image: linear-gradient(
-      rgba(89, 3, 116, 0.1),
-      rgba(195, 0, 255, 0.1)
-    ),
-    url(/uploads/photos/accueil.jpg);
+  // background-image: linear-gradient(
+  //     rgba(89, 3, 116, 0.1),
+  //     rgba(195, 0, 255, 0.1)
+  //   ),
+  //   url(/uploads/photos/accueil.jpg);
   background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
