--- a/templates/category_forum/show.html.twig
+++ b/templates/category_forum/show.html.twig
@@ -10,23 +10,34 @@
 		<div class="card">
 			<div class="card-header">
 				<h2>{{ category_forum.nameCategory }}</h2>
-				<a href="{{ path('post_forum_new') }}">Créer un nouveau topic <i class="fas fa-pencil-alt"></i></a></br>
+
+				{% if app.user %}
+				<a href="{{ path('post_forum_new') }}">Créer un nouveau topic <i class="fas fa-pencil-alt"></i></a>
+				{% else %}
+				<a href="{{ path('app_login') }}">Connectez-vous pour créer un topic <i
+						class="fas fa-sign-in-alt"></i></a>
+				{% endif %}
+
 				<a href="{{ path('category_forum_index') }}">back to list</a></br>
 			</div>
+
 			<div class="card-body bgListCat">
 				<div class="card">
 					{% for post_forum in postForum %}
 					{% if category_forum.id == post_forum.categoryForum.id  %}
-					<h5 class="card-header"><i class="far fa-futbol"></i></h5>
-					<div class="card-body">
-						<h5 class="card-title">{{ post_forum.titlePost }}</h5>
-						<p class="card-text">Par <span class="colorUser">{{ post_forum.users.pseudo }}</span>, le
-							{{ post_forum.createdAt ? post_forum.createdAt|date('d-m-Y à H:i') : '' }}</p>
-					</div>
-					{% endif %}
-					{% endfor %}
+					<a href="{{ path('post_forum_show', {'id': post_forum.id}) }}" class="cardCategory">
+						<h5 class="card-header"><i class="far fa-futbol"></i></h5>
+						<div class="card-body">
+							<h5 class="card-title">{{ post_forum.titlePost }}</h5>
+							<p class="card-text">Par <span class="colorUser">{{ post_forum.users.pseudo }}</span>, le
+								{{ post_forum.createdAt ? post_forum.createdAt|date('d-m-Y à H:i') : '' }}</p>
+						</div>
+						<a />
+						{% endif %}
+						{% endfor %}
 				</div>
 			</div>
+			</a>
 	</section>
 
 
